--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=70" rel="prev">
+        <a href="/?id=71" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip" role="img" class="vertical">
-        <img src="/comics/71/71-metamorphosis-0.webp" alt="A butterfly smiles at a caterpillar and says: 'It's simpler than it looks. You add some colors and then: filter, transform, and animation.'" />
+        <img src="/comics/72/72-tailwind-dog-0.webp" alt="A man asks 'TailwindCSS? Isn't that a weird name for a dog?' The dog owners replies 'I have my reasons...' The dog stands besides them, next to a pile of dog poop bigger than the dog itself." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=70" rel="prev">
+        <a href="/?id=71" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -197,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-01-16"></script>
+    <script src="/js/data.js?last-updated=2023-01-23"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
