--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=71" rel="prev">
+        <a href="/?id=72" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=23">
+        <a class="random-post" href="/?id=27">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -126,8 +126,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="vertical">
-        <img src="/comics/72/72-tailwind-dog-0.webp" alt="A man asks 'TailwindCSS? Isn't that a weird name for a dog?' The dog owners replies 'I have my reasons...' The dog stands besides them, next to a pile of dog poop bigger than the dog itself." />
+      <div id="comic-strip">
+        <img src="/comics/73/73-wendys-0.webp" alt="A man asks goes in a long rant about how CSS should be considered a drawing language." />
+        <img src="/comics/73/73-wendys-1.webp" alt="A person replies 'Sir... this is a Wendys'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +138,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=71" rel="prev">
+        <a href="/?id=72" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -197,7 +198,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-01-23"></script>
+    <script src="/js/data.js?last-updated=2023-02-08"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
