--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=72" rel="prev">
+        <a href="/?id=73" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=27">
+        <a class="random-post" href="/?id=37">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,8 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/73/73-wendys-0.webp" alt="A man goes in a long rant about how CSS should be considered a drawing language." />
-        <img src="/comics/73/73-wendys-1.webp" alt="A person replies 'Sir... this is a Wendys'" />
+        <img src="/comics/74/74-an-apple-a-day-0.webp" alt="Cartoon with one panel with the headline 'They say an apple a day keeps the doctor away... But the CSS Developer has more faith in a margin.' It has a man in the position of the lotus smiles as a doctor tries to reach out to him unsuccessfully. A bubble has the code :has(.doctor) #me { margin: 15vmin; }." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -138,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=72" rel="prev">
+        <a href="/?id=73" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=45">
+        <a class="random-post" href="/?id=55">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -198,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-02-08"></script>
+    <script src="/js/data.js?last-updated=2023-02-17"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
