--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=73" rel="prev">
+        <a href="/?id=75" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/74/74-an-apple-a-day-0.webp" alt="Cartoon with one panel with the headline 'They say an apple a day keeps the doctor away... But the CSS Developer has more faith in a margin.' It has a man in the position of the lotus smiles as a doctor tries to reach out to him unsuccessfully. A bubble has the code :has(.doctor) #me { margin: 15vmin; }." />
+        <img src="/comics/76/76-game-0.webp" alt="Today's cartoon is a CSS game! And I'm your host, Grid Harvey! In the game, you have to guess the name of different brand  based on a code provided in CSS. Click in the link to play!" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=73" rel="prev">
+        <a href="/?id=75" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -166,9 +166,9 @@
       </nav>
 
       <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=34">https://comicss.art/?id=34</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/34/integrate.png">https://comicss.art/comics/34/integrate.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/34/integrate.html" rel="alternate">https://comicss.art/comics/34/integrate.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=76">https://comicss.art/?id=76</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/76/game.png">https://comicss.art/comics/76/game.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/76/game.html" rel="alternate">https://comicss.art/comics/76/game.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -192,12 +192,12 @@
     </nav>
     <hr/>
     <footer>
-      Copyright &copy; 2021-2022. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
+      Copyright &copy; 2021-2023. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
       &mdash; <a href="/atom.xml">Atom Feed</a>
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-02-22"></script>
+    <script src="/js/data.js?last-updated=2023-02-27"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
