--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=75" rel="prev">
+        <a href="/?id=76" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=37">
+        <a class="random-post" href="/?id=3">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/76/76-game-0.webp" alt="Today's cartoon is a CSS game! And I'm your host, Grid Harvey! In the game, you have to guess the name of different brand  based on a code provided in CSS. Click in the link to play!" />
+        <img src="/comics/77/77-wrap-battling-0.webp" alt="Cartoon titled 'Wrap Battling' showing two rappers singing/battling about flex-wrap" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=75" rel="prev">
+        <a href="/?id=76" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=55">
+        <a class="random-post" href="/?id=13">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -166,9 +166,9 @@
       </nav>
 
       <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=76">https://comicss.art/?id=76</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/76/game.png">https://comicss.art/comics/76/game.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/76/game.html" rel="alternate">https://comicss.art/comics/76/game.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=77">https://comicss.art/?id=77</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/77/wrap-battling.png">https://comicss.art/comics/77/wrap-battling.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/77/wrap-battling.html" rel="alternate">https://comicss.art/comics/77/wrap-battling.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
