--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=80" rel="prev">
+        <a href="/?id=81" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,9 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/81/81-selectors-fight-0.webp" alt="Cartoon showing a CSS class selector telling an id selector: 'you have no class'. The id selector replies: 'You need to be more specific!'" />
+        <img src="/comics/82/82-how-many-0.webp" alt="How many CSS developers does it take to change a lightbulb? None. It is a JavaScript issue." />
+        <img src="/comics/82/82-how-many-1.webp" alt="How many CSS developers does it take to change a lightbulb? None. They are OK working in dark mode." />
+        <img src="/comics/82/82-how-many-2.webp" alt="How many JS developers does it take to change a lightbulb? One. But they'll need 5GB in node_modules, TailwindCSS, their own implementation of the lefty-loosey.js library (dependent on righty-tighty.js), and the latest MacBook Pro to handle everything. The resulting JS file will be 8MB and only change the light bulb if the room has Chrome in it." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +139,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=80" rel="prev">
+        <a href="/?id=81" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -166,9 +168,9 @@
       </nav>
 
       <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=81">https://comicss.art/?id=81</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/81/selectors-fight.png">https://comicss.art/comics/81/selectors-fight.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/81/selectors-fight.html" rel="alternate">https://comicss.art/comics/81/selectors-fight.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=82">https://comicss.art/?id=82</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/82/how-many.png">https://comicss.art/comics/82/how-many.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/82/how-many.html" rel="alternate">https://comicss.art/comics/82/how-many.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -197,7 +199,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-03-27"></script>
+    <script src="/js/data.js?last-updated=2023-04-03"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
