--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=83" rel="prev">
+        <a href="/?id=84" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/82/83-off-the-grid-0.webp" alt="Why couldn't the developer align the div? Because it was positioned off-the-grid." />
+        <img src="/comics/85/85-never-late-0.webp" alt="Cartoon showing a bearded wizard wearing a gray clock and pointy hat (Gandalf from the Lord of the Rings) saying: 'A wizard is never late, nor is he early. He arrives precisely when the animation-delay means to.'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=83" rel="prev">
+        <a href="/?id=84" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -166,9 +166,9 @@
       </nav>
 
       <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=83">https://comicss.art/?id=83</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/83/off-the-grid.png">hhttps://comicss.art/comics/83/off-the-grid.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/83/off-the-grid.html" rel="alternate">https://comicss.art/comics/83/off-the-grid.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=85">https://comicss.art/?id=85</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/85/never-late.png">hhttps://comicss.art/comics/85/never-late.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/85/never-late.html" rel="alternate">https://comicss.art/comics/85/never-late.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -197,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-04-12"></script>
+    <script src="/js/data.js?last-updated=2023-04-24"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
