--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>An Apple A Day...</h1>
+      <h1>CSS Grid or Not CSS Grid</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=84" rel="prev">
+        <a href="/?id=85" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/85/85-never-late-0.webp" alt="Cartoon showing a bearded wizard wearing a gray clock and pointy hat (Gandalf from the Lord of the Rings) saying: 'A wizard is never late, nor is he early. He arrives precisely when the animation-delay means to.'" />
+        <img src="/comics/86/86-css-grid-or-not-css-grid-0.webp" alt="Cartoon with a man wearing shakesperean clothing while holding a skull and saying 'CSS Grid or not CSS Grid, that is the question'. Off panel someone sighs 'Web developers really like drama...'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=84" rel="prev">
+        <a href="/?id=85" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -165,10 +165,10 @@
         </a>
       </nav>
 
-      <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=85">https://comicss.art/?id=85</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/85/never-late.png">hhttps://comicss.art/comics/85/never-late.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/85/never-late.html" rel="alternate">https://comicss.art/comics/85/never-late.html</a></p>
+      <p class="video"><a href="https://www.youtube.com/watch?v=7_3EEHjf3Z0" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=86">https://comicss.art/?id=86</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/86/css-grid-or-not-css-grid.png">hhttps://comicss.art/comics/86/css-grid-or-not-css-grid.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/86/css-grid-or-not-css-grid.html" rel="alternate">https://comicss.art/comics/86/css-grid-or-not-css-grid.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -188,6 +188,8 @@
         <li><a href="/?id=51"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-51.webp" alt="" /><span class="a11y-hidden">Comic 51</span></a></li>
         <li><a href="/?id=59"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-59.webp" alt="" /><span class="a11y-hidden">Comic 59</span></a></li>
         <li><a href="/?id=67"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-67.webp" alt="" /><span class="a11y-hidden">Comic 67</span></a></li>
+        <li><a href="/?id=78"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-78.webp" alt="" /><span class="a11y-hidden">Comic 78</span></a></li>
+        <li><a href="/?id=80"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-80.webp" alt="" /><span class="a11y-hidden">Comic 80</span></a></li>
       </ul>
     </nav>
     <hr/>
@@ -197,7 +199,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-04-24"></script>
+    <script src="/js/data.js?last-updated=2023-05-01"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
