--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>CSS Grid or Not CSS Grid</h1>
+      <h1>Coffee as a CSS Color</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=85" rel="prev">
+        <a href="/?id=86" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=55">
+        <a class="random-post" href="/?id=17">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/86/86-css-grid-or-not-css-grid-0.webp" alt="Cartoon with a man wearing shakesperean clothing while holding a skull and saying 'CSS Grid or not CSS Grid, that is the question'. Off panel someone sighs 'Web developers really like drama...'" />
+        <img src="/comics/87/87-coffee-as-a-css-color-0.webp" alt="Cartoon titled 'Coffee Style Sheet' with different types of coffee described as CSS colors. Black coffee is hwb(0 0 100%), Americano is hwb(50% 0 50%), Lungo is hwb(50% 0 50%), cafe au lait is hwb(0 50% 50%), latte is hwb(0 66% 33%), macchiato is hwb(0 33% 66%), cappuccino is hwb(0 66% 33%), espresso is hwb(0 0 33%), and 'Need more coffee!' is hwb(0 0 0)." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=85" rel="prev">
+        <a href="/?id=86" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=73">
+        <a class="random-post" href="/?id=49">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -165,10 +165,10 @@
         </a>
       </nav>
 
-      <p class="video"><a href="https://www.youtube.com/watch?v=7_3EEHjf3Z0" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=86">https://comicss.art/?id=86</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/86/css-grid-or-not-css-grid.png">hhttps://comicss.art/comics/86/css-grid-or-not-css-grid.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/86/css-grid-or-not-css-grid.html" rel="alternate">https://comicss.art/comics/86/css-grid-or-not-css-grid.html</a></p>
+      <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=87">https://comicss.art/?id=87</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/87/coffee-as-a-css-color.png">hhttps://comicss.art/comics/87/coffee-as-a-css-color.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/87/coffee-as-a-css-color.html" rel="alternate">https://comicss.art/comics/87/coffee-as-a-css-color.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -178,9 +178,9 @@
     <nav class="thumbs-nav" aria-label="trending comics">
       <ul>
         <li><a href="/?id=2"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-2.webp" alt="" /><span class="a11y-hidden">Comic 2</span></a></li>
-        <li><a href="/?id=6"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-6.webp" alt="" /><span class="a11y-hidden">Comic 6</span></a></li>
+        <li><a href="/?id=46"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-46.webp" alt="" /><span class="a11y-hidden">Comic 46</span></a></li>
         <li><a href="/?id=16"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-16.webp" alt="" /><span class="a11y-hidden">Comic 16</span></a></li>
-        <li><a href="/?id=23"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-23.webp" alt="" /><span class="a11y-hidden">Comic 23</span></a></li>
+        <li><a href="/?id=48"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-48.webp" alt="" /><span class="a11y-hidden">Comic 48</span></a></li>
         <li><a href="/?id=29"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-29.webp" alt="" /><span class="a11y-hidden">Comic 29</span></a></li>
         <li><a href="/?id=32"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-32.webp" alt="" /><span class="a11y-hidden">Comic 32</span></a></li>
         <li><a href="/?id=39"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-39.webp" alt="" /><span class="a11y-hidden">Comic 39</span></a></li>
@@ -199,7 +199,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-05-01"></script>
+    <script src="/js/data.js?last-updated=2023-05-09"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
